--- a/modules/asn1.html
+++ b/modules/asn1.html
@@ -3,8 +3,8 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <head>
-    <title>Reference</title>
-    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
+    <title>lua-openssl Docmentation</title>
+    <link rel="stylesheet" href="../ldoc_pale.css" type="text/css" />
 </head>
 <body>
 
@@ -24,7 +24,7 @@
 
 <div id="navigation">
 <br/>
-<h1>ldoc</h1>
+<h1>lua-openssl</h1>
 
 <ul>
   <li><a href="../index.html">Index</a></li>
@@ -60,16 +60,18 @@
   <li><a href="../modules/x509.name.html">x509.name</a></li>
   <li><a href="../modules/csr.html">csr</a></li>
 </ul>
+<h2>Topics</h2>
+<ul class="$(kind=='Topics' and '' or 'nowrap'">
+  <li><a href="../topics/readme.md.html">readme</a></li>
+</ul>
 
 </div>
 
 <div id="content">
 
 <h1>Module <code>asn1</code></h1>
-<p>Provide asn1_object, asn1_string, asn1_object as lua object.</p>
-<p>
- Sometime when you want to custome x509, you maybe need to use this.
-</p>
+<p>Provide asn1<em>object, asn1</em>string, asn1_object as lua object.</p>
+<p> Sometime when you want to custome x509, you maybe need to use this.</p>
     <h3>Usage:</h3>
     <ul>
         <pre class="example">
@@ -289,7 +291,6 @@
  "visible", "general", "unversal", "bmp", "utctime" </p>
 
 
-
     <h3>Parameters:</h3>
     <ul>
         <li><span class="parameter">data</span>
@@ -337,6 +338,8 @@
     <ol>
 
            <span class="types"><span class="type">nil</span></span>
+
+
 
     </ol>
 
