--- a/modules/openssl.html
+++ b/modules/openssl.html
@@ -3,8 +3,8 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <head>
-    <title>Reference</title>
-    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
+    <title>lua-openssl Docmentation</title>
+    <link rel="stylesheet" href="../ldoc_pale.css" type="text/css" />
 </head>
 <body>
 
@@ -24,7 +24,7 @@
 
 <div id="navigation">
 <br/>
-<h1>ldoc</h1>
+<h1>lua-openssl</h1>
 
 <ul>
   <li><a href="../index.html">Index</a></li>
@@ -58,6 +58,10 @@
   <li><a href="../modules/x509.name.html">x509.name</a></li>
   <li><a href="../modules/csr.html">csr</a></li>
 </ul>
+<h2>Topics</h2>
+<ul class="$(kind=='Topics' and '' or 'nowrap'">
+  <li><a href="../topics/readme.md.html">readme</a></li>
+</ul>
 
 </div>
 
@@ -65,7 +69,9 @@
 
 <h1>Module <code>openssl</code></h1>
 <p>Provide openssl base function in lua.</p>
-<p></p>
+<p>
+
+</p>
     <h3>Usage:</h3>
     <ul>
         <pre class="example">
@@ -133,6 +139,8 @@
         <li><span class="parameter">str</span>
             <span class="types"><a class="type" href="http://www.lua.org/manual/5.1/manual.html#5.4">string</a></span>
 
+
+
         </li>
         <li><span class="parameter">encode</span>
             <span class="types"><span class="type">boolean</span></span>
@@ -145,6 +153,8 @@
     <ol>
 
            <span class="types"><a class="type" href="http://www.lua.org/manual/5.1/manual.html#5.4">string</a></span>
+
+
 
     </ol>
 
@@ -192,6 +202,8 @@
         <li><span class="parameter">verbose</span>
             <span class="types"><span class="type">boolean</span></span>
 
+
+
          (<em>default</em> false)
         </li>
     </ul>
@@ -226,6 +238,8 @@
         <li><span class="parameter">length</span>
             <span class="types"><span class="type">number</span></span>
 
+
+
         </li>
         <li><span class="parameter">strong</span>
             <span class="types"><span class="type">boolean</span></span>
@@ -238,6 +252,8 @@
     <ol>
 
            <span class="types"><a class="type" href="http://www.lua.org/manual/5.1/manual.html#5.4">string</a></span>
+
+
 
     </ol>
 
@@ -349,6 +365,8 @@
         <li><span class="parameter">engine_id</span>
             <span class="types"><a class="type" href="http://www.lua.org/manual/5.1/manual.html#5.4">string</a></span>
 
+
+
         </li>
     </ul>
 
@@ -356,6 +374,8 @@
     <ol>
 
            <span class="types"><a class="type" href="../modules/openssl.html#engine">engine</a></span>
+
+
 
     </ol>
 
